# new_wickedwaifus

./: Cargo.toml  Dockerfile-builder  Dockerfile-service  LICENSE  README.md  builder.bat  builder.sh  configserver.toml  docker-compose-hotpatch.yml  docker-compose.yml  hotpatch.toml  loginserver.toml  run.bat
data/assets/config-server/: README.md
data/assets/config-server/3CtHR0yFnPExHR1dkbjmQ9nkryslKWMx/: index.json
data/assets/config-server/3SJkVXTH22d6sNDHMLq9gmxjJOITwnTr/: index.json
data/assets/config-server/73vPmfiehXNEhMi78hLvw1X2Z74yd9Ww/: index.json
data/assets/config-server/B5zXkYOOZe9AK0NNfhnCu5iqTuFeyUYc/: index.json
data/assets/config-server/RStmYxFmIS9PDxGS7Nq6j0l81GJD7EgB/: index.json
data/assets/config-server/RlFsZFnwapAUu4Lyh1dRmaKU5LWUhh3d/: index.json
data/assets/config-server/Xv2EHdJz8IOSvTqViagHTrUY7NnGGRh8/: index.json
data/assets/config-server/bpIWdherKqwfYUO5gIE5fnMfOL4PmBty/: index.json
data/assets/config-server/iV40UDOr2LFNaN6I2dGbeZymfcn4qBJL/: index.json
data/assets/config-server/lKieJnfAM623lOb07vKJpEGfaAw3b4Wx/: index.json
data/docker/: configserver.toml  gameserver.toml  gateway.toml  loginserver.toml
data/docker/postgres/scripts/: 0_INIT.sql  1_PERMS.sql
wicked-waifus-asset-updater/: Cargo.toml
wicked-waifus-asset-updater/src/: lib.rs
wicked-waifus-commons/: Cargo.toml
wicked-waifus-commons/src/: config_util.rs  lib.rs  logging.rs  splash.rs  time_util.rs
wicked-waifus-config-server/: Cargo.toml
wicked-waifus-config-server/src/: main.rs
wicked-waifus-data/: Cargo.toml
wicked-waifus-data/src/: achievement.rs  adventure_task.rs  ai_base.rs  ai_state_machine_config.rs  area.rs  base_property.rs  blueprint_config.rs  buff.rs  calabash_develop_reward.rs  calabash_level.rs  damage.rs  dragon_pool.rs  drop_package.rs  dungeon_detection.rs  exchange_reward.rs  exchange_shared.rs  explore_progress.rs  explore_tools.rs  favor_goods.rs  favor_level.rs  favor_story.rs  favor_word.rs  fly_skin_config.rs  forge_formula.rs  function_condition.rs  gacha.rs  gacha_pool.rs  gacha_view_info.rs  guide_group.rs  guide_tutorial.rs  instance_dungeon.rs  item_exchange_content.rs  level_entity_config.rs  level_play_data.rs  level_play_node_data.rs  lib.rs  liveness_task.rs  lord_gym.rs  misc_data.rs  model_config_preload.rs  (+3 more)
wicked-waifus-data/src/node_data/: mod.rs
wicked-waifus-data/src/pb_components/: action.rs  ai.rs  attribute.rs  base_info.rs  common.rs  condition.rs  entity_state.rs  flow.rs  interact.rs  mod.rs  model.rs  monster.rs  option.rs  reward.rs  teleport.rs  timer.rs
wicked-waifus-database/: Cargo.toml
wicked-waifus-database/migrations/: 0001_tables.sql
wicked-waifus-database/src/: config.rs  lib.rs  models.rs
wicked-waifus-game-server/: Cargo.toml  gameserver.default.toml
wicked-waifus-game-server/scripts/: censorshipfix.js  debug_disable.js  uidfix.js  watermask-disable.js  watermask-dvd.js  watermask-edit.js
wicked-waifus-game-server/src/: config.rs  gateway_connection.rs  main.rs  player_save_task.rs  service_message_handler.rs
wicked-waifus-game-server/src/logic/: mod.rs  thread_mgr.rs
wicked-waifus-game-server/src/logic/components/: attribute.rs  autonomous.rs  character_attach.rs  concomitant.rs  entity_config.rs  equip.rs  fight_buff.rs  fsm.rs  interact.rs  logic_state.rs  mod.rs  monster_ai.rs  movement.rs  owner_player.rs  paragliding_skin.rs  player_owned_entity_marker.rs  position.rs  role_skin.rs  soar_wing_skin.rs  state_tag.rs  summoner.rs  tag.rs  visibility.rs  vision_skill.rs  weapon_skin.rs
wicked-waifus-game-server/src/logic/ecs/: buf.rs  component.rs  entity.rs  mod.rs  world.rs
wicked-waifus-game-server/src/logic/gacha/: category.rs  gacha_pool.rs  mod.rs  pool_info.rs  service.rs
wicked-waifus-game-server/src/logic/handler/: advice.rs  animal.rs  chat.rs  combat.rs  coop.rs  dummy.rs  entity.rs  friend.rs  gacha.rs  guide.rs  inventory.rs  lord_gym.rs  mail.rs  map.rs  misc.rs  mod.rs  role.rs  scene.rs  skill.rs  teleport.rs  tutorial.rs  weapon.rs
wicked-waifus-game-server/src/logic/math/: area_range.rs  mod.rs  transform.rs  vector.rs
wicked-waifus-game-server/src/logic/player/: basic_info.rs  explore_tools.rs  in_world_player.rs  location.rs  mod.rs  player_adventure.rs  player_advice.rs  player_chat.rs  player_func.rs  player_guides.rs  player_inventory.rs  player_map_trace.rs  player_mc_element.rs  player_month_card.rs  player_teleports.rs  player_tutorials.rs  player_unlocked_skins.rs
wicked-waifus-game-server/src/logic/role/: formation.rs  mod.rs
wicked-waifus-game-server/src/logic/systems/: mod.rs  movement.rs
wicked-waifus-game-server/src/logic/utils/: action_utils.rs  condition_utils.rs  entity_serializer.rs  growth_utils.rs  load_role_info.rs  mod.rs  quadrant_util.rs  seq_utils.rs  tag_utils.rs  world_util.rs
wicked-waifus-game-server/src/session/: manager.rs
wicked-waifus-gateway-server/: Cargo.toml  gateway.default.toml
wicked-waifus-gateway-server/security/: client_public_key.pem  pre_2.2_client_public_key.pem
wicked-waifus-gateway-server/src/: config.rs  main.rs  udp_server.rs
wicked-waifus-gateway-server/src/handler/: client_message_handler.rs  client_push_handler.rs  client_request_handler.rs  game_server_connection.rs  mod.rs  service_message_handler.rs
wicked-waifus-gateway-server/src/session/: error.rs  manager.rs  mod.rs  util.rs
wicked-waifus-hotpatch-server/: Cargo.toml
wicked-waifus-hotpatch-server/src/: main.rs
wicked-waifus-http/: Cargo.toml
wicked-waifus-http/src/: config.rs  encryption.rs  lib.rs  util.rs
wicked-waifus-login-server/: Cargo.toml
wicked-waifus-login-server/src/: config.rs  handler.rs  main.rs  schema.rs
wicked-waifus-network/: Cargo.toml
wicked-waifus-network/src/: client.rs  config.rs  lib.rs  message.rs  server.rs
wicked-waifus-protocol-internal/: Cargo.toml  build.rs
wicked-waifus-protocol-internal/proto/: data.proto  internal.proto
wicked-waifus-protocol-internal/src/: lib.rs
wicked-waifus-protokey/: Cargo.toml
wicked-waifus-protokey/src/: config.rs  lib.rs
(+1 files in other folders)
