[package]
name = "wicked-waifus-config-server"
edition = "2021"
version.workspace = true

[dependencies]
# Framework
tokio.workspace = true

# Serialization
serde.workspace = true
toml.workspace = true

# Util
anyhow.workspace = true

# Tracing
tracing.workspace = true

# Internal
wicked-waifus-asset-updater.workspace = true
wicked-waifus-commons.workspace = true
wicked-waifus-http.workspace = true
