[package]
name = "wicked-waifus-data"
edition = "2021"
version.workspace = true

[features]
strict_json_fields = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
paste.workspace = true
thiserror.workspace = true
tracing.workspace = true
