[package]
name = "wicked-waifus-login-server"
edition = "2021"
version.workspace = true

[dependencies]
# Framework
tokio.workspace = true

# Serialization
serde.workspace = true

# Util
anyhow.workspace = true

# Tracing
tracing.workspace = true

# Internal
wicked-waifus-commons.workspace = true
wicked-waifus-http.workspace = true
wicked-waifus-database.workspace = true
